wxc/include/ewxw/wxc_glue.h

TClass(wxHtmlHelpController) wxHtmlHelpController_Create( int _style );
void       wxHtmlHelpController_Delete( TSelf(wxHtmlHelpController) _obj );
int        wxHtmlHelpController_Display( TSelf(wxHtmlHelpController) _obj, void* x );
int        wxHtmlHelpController_DisplayBlock( TSelf(wxHtmlHelpController) _obj, int blockNo );
int        wxHtmlHelpController_DisplayContents( TSelf(wxHtmlHelpController) _obj );
int        wxHtmlHelpController_DisplayIndex( TSelf(wxHtmlHelpController) _obj );
int        wxHtmlHelpController_DisplayNumber( TSelf(wxHtmlHelpController) _obj, int id );
int        wxHtmlHelpController_DisplaySection( TSelf(wxHtmlHelpController) _obj, TStringVoid section );
int        wxHtmlHelpController_DisplaySectionNumber( TSelf(wxHtmlHelpController) _obj, int sectionNo );
TClass(wxFrame) wxHtmlHelpController_GetFrame( TSelf(wxHtmlHelpController) _obj );
void*      wxHtmlHelpController_GetFrameParameters( TSelf(wxHtmlHelpController) _obj, void* title, int* width, int* height, int* pos_x, int* pos_y, int* newFrameEachTime );
int        wxHtmlHelpController_Initialize( TSelf(wxHtmlHelpController) _obj, TStringVoid file );
int        wxHtmlHelpController_KeywordSearch( TSelf(wxHtmlHelpController) _obj, TStringVoid keyword );
int        wxHtmlHelpController_LoadFile( TSelf(wxHtmlHelpController) _obj, TStringVoid file );
int        wxHtmlHelpController_Quit( TSelf(wxHtmlHelpController) _obj );
void       wxHtmlHelpController_ReadCustomization( TSelf(wxHtmlHelpController) _obj, TClass(wxConfigBase) cfg, TStringVoid path );
void       wxHtmlHelpController_SetFrameParameters( TSelf(wxHtmlHelpController) _obj, void* title, TSize(width,height), int pos_x, int pos_y, int newFrameEachTime );
void       wxHtmlHelpController_SetTempDir( TSelf(wxHtmlHelpController) _obj, TStringVoid path );
void       wxHtmlHelpController_SetTitleFormat( TSelf(wxHtmlHelpController) _obj, void* format );
void       wxHtmlHelpController_SetViewer( TSelf(wxHtmlHelpController) _obj, TStringVoid viewer, int flags );
void       wxHtmlHelpController_UseConfig( TSelf(wxHtmlHelpController) _obj, TClass(wxConfigBase) config, TStringVoid rootpath );
void       wxHtmlHelpController_WriteCustomization( TSelf(wxHtmlHelpController) _obj, TClass(wxConfigBase) cfg, TStringVoid path );